# GithubAction2Slack

./: .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  action.yaml  main.py  pyproject.toml
