
[tool.poetry]
name = "gha-slack-notify"
version = "0.1.0"
description = ""
authors = ["Asugawara <asgasw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.9b0"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
